# deserx

./: Cargo.toml  README.md
deserx/: Cargo.toml
deserx-quick-xml/: Cargo.toml
deserx-quick-xml/src/: de.rs  errors.rs  lib.rs
deserx-quick-xml/src/de/: deserializer.rs
deserx-quick-xml/src/de/deserializer/: xml_reader.rs
deserx/src/: de_xml.rs  deser_xml.rs  error.rs  lib.rs  quick_xml_impl.rs
deserx/src/de_xml/: de_xml.rs  error.rs  visitor.rs  xml_deserializer.rs
deserx/src/deser_xml/: de_xml_impl.rs  ser_xml_impl.rs
deserx/src/testing/: assert.rs  mod.rs  token.rs  token_serializer.rs
deserx/tests/: derives.rs  xml_derive.rs  xml_manual.rs
deserx_derive/: Cargo.toml
deserx_derive/src/: de_xml.rs  deserx_xml.rs  lib.rs  parse.rs  ser_xml.rs  shared.rs
deserx_derive/src/de_xml/: analyze.rs  codegen.rs  lower.rs  mod.rs
expanded/: xml_derive_expand.rs
src/: deser_xml.rs  error.rs  lib.rs
src/de/: mod.rs
src/deser_xml/: de_xml_impl.rs
src/testing/: error.rs  token_serializer.rs
test-suite/: Cargo.toml
test-suite/tests/api/: main.rs  manuals.rs  test_manuals.rs
tests/: quick_xml.rs  xml.rs  xml_derive.rs  xml_manual.rs
