[package]
name = "deserx_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = []

no_std = ["dep:hashbrown"]

[dependencies]
hashbrown = { version = "0.13.2", optional = true }
# hashbrown = {version = "0.13", optional = true}
