[package]
name = "deserx_derive"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = []

no_std = ["dep:hashbrown"]

[dependencies]
deluxe = "0.5.0"
hashbrown = { version = "0.13.2", optional = true }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.60"
quote = "1.0.28"
syn = "2.0.18"
# hashbrown = {version = "0.13", optional = true}
